# molftp

./: .gitignore  BENCHMARK_VALID_STATE.md  CHANGELOG_v1.3.0.md  COMMIT_INSTRUCTIONS.md  FILES_CHANGED.md  LICENSE  MULTITHREADING_PLAN.md  NCM_METHOD_REPORT.md  PHASE2_PHASE3_COMPLETE.md  PHASE2_PHASE3_SUMMARY.md  PR1_BODY.md  PR2_BODY.md  PR_BODY.md  PR_DESCRIPTION.md  PR_MULTITHREAD_2D_3D.md  PR_STRUCTURE.md  PR_SUMMARY.md  README.md  V1.5.0_READY_FOR_PR.md  build_molftp.sh  pyproject.toml  pytest.ini  setup.py  test_biodegradation_speed_metrics.py  test_both_methods_benchmark.py
.github/workflows/: ci.yml
examples/: example_ml_logistic_regression.py  example_ml_xgboost.py  example_multitask_dummymask.py  example_multitask_keyloo.py  example_single_task_dummymask.py  example_single_task_keyloo.py
molftp/: __init__.py  prevalence.py
src/: molftp_core.cpp
tests/: README.md  conftest.py  test_basic.py  test_indexed_miners_equivalence.py  test_kloo_core.py  test_pickle_and_threaded.py  test_save_load.py
